--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
     <head>
         <title>This is a test</title>
     </head>
-    <body>
+    <body style="background-color: #EEE">
         I really hope this works
-
-        <h1>LOL</h1>
     </body>
 </html>
