--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
     <head>
         <title>This is a test</title>
     </head>
-    <body style="background-color: #EEE">
+
+    <style>
+    body {
+    	background-color:;
+    }
+    </style>
+    <body>
         I really hope this works
     </body>
 </html>
