Cleaned some stuff up and added an some icons

--- a/index.html
+++ b/index.html
@@ -2,14 +2,10 @@
 <html>
     <head>
         <title>This is a test</title>
+        <link rel="stylesheet" type="text/css" href="stylesheet.css"/>
     </head>
-
-    <style>
-    body {
-    	background-color:;
-    }
-    </style>
     <body>
         I really hope this works
+        <script type="text/javascript" src="script.js"></script>
     </body>
 </html>
